Added Suppliers UI

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -24,8 +24,7 @@
                 <div class="form-group">
                   <div class="position-relative has-icon-left">
                     <label for="exampleInputUsername" class="sr-only">Username</label>
-                    <input type="text" id="exampleInputUsername" class="form-control" placeholder="Username" ngModel
-                      required>
+                    <input type="text" id="exampleInputUsername" class="form-control" placeholder="Username" required>
                     <div class="form-control-position"> <i class="icon-user"></i>
                     </div>
                   </div>
@@ -33,7 +32,7 @@
                 <div class="form-group">
                   <div class="position-relative has-icon-left">
                     <label for="exampleInputPassword" class="sr-only">Password</label>
-                    <input type="password" id="exampleInputPassword" class="form-control" placeholder="Password" ngModel
+                    <input type="password" id="exampleInputPassword" class="form-control" placeholder="Password"
                       required>
                     <div class="form-control-position"> <i class="icon-lock"></i>
                     </div>
